config-root/namespaces/jx-production/nodetest/nodetest-nodetest-deploy.yaml
# Source: nodetest/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodetest-nodetest
  labels:
    draft: draft-app
    chart: "nodetest-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'nodetest'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: nodetest-nodetest
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodetest-nodetest
    spec:
      serviceAccountName: nodetest-nodetest
      containers:
        - name: nodetest
          image: "gcr.io/compute-project-183119/nodetest:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
