config-root/namespaces/jx-production/nodetest/nodetest-ingress.yaml
# Source: nodetest/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'nodetest'
  name: nodetest
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nodetest
                port:
                  number: 80
      host: nodetest-jx-production.34.82.59.208.nip.io
